--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-7 col-xs-12">
+    <h3>Hello! I am <i class = "text-info">Madhukar...</i></h3>
 	{{ content }}
   </div>
   
